UX: prevent cursor flash on navigation; flatten custom cursor to zero height on home page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noah Darwin Lee</title>
     <style>
+        /* Early cursor hide to prevent flash on navigation (desktop only) */
+        @media (pointer: fine) {
+            html, body, * { cursor: none !important; }
+        }
+    </style>
+    <style>
         .reach-out-link {
             color: #e3e3b0;
             font-size: 20px;
