--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,12 @@
     <link rel="shortcut icon" href="websiteiconndl.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Noah Darwin Lee</title>
+    <style>
+        /* Early cursor hide to prevent flash on navigation (desktop only) */
+        @media (pointer: fine) {
+            html, body, * { cursor: none !important; }
+        }
+    </style>
 </head>
 <body>
     <div class="header">
