--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="shortcut icon" href="websiteiconndl.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noah Darwin Lee</title>
+    <style>
+        /* Early cursor hide to prevent flash on navigation (desktop only) */
+        @media (pointer: fine) {
+            html, body, * { cursor: none !important; }
+        }
+    </style>
 </head>
 <body style="background-image: linear-gradient(to bottom #e3e3b0, #ffffff)">
 
@@ -196,7 +202,7 @@ html:not(.loaded), body:not(.loaded) {
     pointer-events: none;
     z-index: 99999;
     opacity: 0;
-    transform: scaleY(0.1);
+    transform: scaleY(0);
     transition: opacity 0.3s ease, transform 0.3s ease, background-color 0.2s ease;
 }
 
@@ -245,7 +251,7 @@ html:not(.loaded), body:not(.loaded) {
     opacity: 0.5;
     pointer-events: none;
     z-index: 99998;
-    transform: scaleY(0.1);
+    transform: scaleY(0);
     transition: opacity 0.3s ease, transform 0.3s ease, background-color 0.2s ease;
     filter: drop-shadow(0 0 15px #e3e3b0) drop-shadow(0 0 30px rgba(227, 227, 176, 0.6));
 }
