--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noah Darwin Lee</title>
     <style>
+        /* Early cursor hide to prevent flash on navigation (desktop only) */
+        @media (pointer: fine) {
+            html, body, * { cursor: none !important; }
+        }
+    </style>
+    <style>
         .header-fixed {
             position: fixed !important;
             top: 0 !important;
