--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,14 @@
                         e.preventDefault();
                         return;
                     }
+                    // Inject a temporary global cursor guard to prevent any flash
+                    let guard = document.getElementById('cursor-guard');
+                    if (!guard) {
+                        guard = document.createElement('style');
+                        guard.id = 'cursor-guard';
+                        guard.textContent = '*, *::before, *::after { cursor: none !important; } html, body { cursor: none !important; }';
+                        document.head.appendChild(guard);
+                    }
                     // Keep cursor hidden during navigation
                     document.body.style.cursor = 'none';
                     document.documentElement.style.cursor = 'none';
