--- a/projects.html
+++ b/projects.html
@@ -234,7 +234,7 @@
     </a>
     <br>
 </div>
-
+<!-- 
 <div class="publications">
     <h3 style="font-size:larger; margin-left: -.3%;">
         Research:
@@ -290,7 +290,7 @@
         </h4>
     </a>
     <br>
-</div>
+</div> -->
 
 </div>
 
@@ -513,6 +513,14 @@ html:not(.loaded), body:not(.loaded) {
         const navLinks = document.querySelectorAll('a[href^="/"], a[href$=".html"], .header-nav-button');
         navLinks.forEach(link => {
             link.addEventListener('click', function(e) {
+                    // Inject a temporary global cursor guard to prevent any flash
+                    let guard = document.getElementById('cursor-guard');
+                    if (!guard) {
+                        guard = document.createElement('style');
+                        guard.id = 'cursor-guard';
+                        guard.textContent = '*, *::before, *::after { cursor: none !important; } html, body { cursor: none !important; }';
+                        document.head.appendChild(guard);
+                    }
                 // Keep cursor hidden during navigation
                 document.body.style.cursor = 'none';
                 document.documentElement.style.cursor = 'none';
