UI(projects): shift footer left by 2px

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,11 @@
             transform: translateY(-100%) !important;
             z-index: 1000;
         }
+
+        /* Slightly shift footer left on projects page */
+        .footer {
+            padding-left: calc(3.4% - 2px) !important;
+        }
     </style>
 </head>
 <body style="background-color: #e68019;">
@@ -295,8 +300,8 @@
 </div>
 
     <!--below is the extra endspace and footer-->
-<div class="endspacesmall">
-</div>
+<!-- <div class="endspacesmall">
+</div> -->
     
 <div class="footer">
     <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
