Update content: Dutch page tweaks, blog adjustments, add logo assets

--- a/dutch.html
+++ b/dutch.html
@@ -186,7 +186,7 @@
 
             <div class="dutch-description">
                 <h2>About the Circle</h2>
-                <p>I started this class in 2024 after wanting to introduce a Dutch program to the university for several years. There is no official Dutch language at program at UChicago despite <a href="https://flps.newberry.org/id/5420781_1_0073" style="text-decoration: underline; color: inherit;">nearly 120 years</a> of calls to launch one. Our weekly language circle is designed for all skill levels, from complete beginners to those looking to hone their Dutch skills. We create a welcoming learning environment to learn at your own pace with tailored instruction.</p>
+                <p>I started this class in 2024 after wanting to introduce a Dutch program to the university for several years. There is no official Dutch language at program at UChicago despite <a href="https://flps.newberry.org/id/5420781_1_0073 " style="text-decoration: underline; color: inherit;" target="_blank">nearly 120 years</a> of calls to launch one. Our weekly language circle is designed for all skill levels, from complete beginners to those looking to hone their Dutch skills. We create a welcoming learning environment to learn at your own pace with tailored instruction.</p>
             </div>
 
             <div class="schedule">
