Dutch: update meeting location to Swift Hall 200

--- a/dutch.html
+++ b/dutch.html
@@ -176,7 +176,7 @@
                 <h2>Meeting Information</h2>
                 <div class="meeting-details">
                     <p><i>When:</i> &nbsp; Wednesdays 7:00PM</p>
-                    <p><i>Where:</i> &nbsp; Crerar Library 010B</p>
+                    <p><i>Where:</i> &nbsp; Swift Hall 200</p>
                     <p><i>Who:</i> &nbsp; All levels welcome!</p>
                 </div>
                 <div class="location-map">
