Blog: add Guide to Chicago post and move it to first entry

--- a/blog.html
+++ b/blog.html
@@ -122,13 +122,13 @@
         
         <div class="blog-content">
             <div class="blog-post">
-                <a href="https://docs.google.com/presentation/d/16V9TGh3Xi9RxhmywWtWF7uJGD1IbTwxljtGcyvS2lPA/edit?usp=sharing" target="_blank">
-                    <img src="blogimages/100 Architects of the Modern Era you Should Know (1).png" alt="100 Architects of the Modern Era You Should Know" class="blog-image">
+                <a href="https://docs.google.com/document/d/1HOVF9Lcd3k4j_xvErkGzNGA9QknVvsKKbM8lg6KoG3k/edit?usp=sharing" target="_blank">
+                    <img src="projectimages/chicagomap.png" alt="Guide to Chicago" class="blog-image">
                 </a>
-                <h2 class="blog-post-title">100 Architects of the Modern Era You Should Know</h2>
-                <p class="blog-post-description">A Google Slides presentation.</p>
-                <a href="https://docs.google.com/presentation/d/16V9TGh3Xi9RxhmywWtWF7uJGD1IbTwxljtGcyvS2lPA/edit?usp=sharing" class="blog-link" target="_blank">
-                    View Slides →
+                <h2 class="blog-post-title">Guide to Chicago</h2>
+                <p class="blog-post-description">A comprehensive guide to exploring Chicago</p>
+                <a href="https://docs.google.com/document/d/1HOVF9Lcd3k4j_xvErkGzNGA9QknVvsKKbM8lg6KoG3k/edit?usp=sharing" class="blog-link" target="_blank">
+                    Read →
                 </a>
             </div>
             <div class="blog-post">
@@ -150,6 +150,16 @@
                 <p class="blog-post-description">Reviewing every restaurant in Hyde Park Chicago</p>
                 <a href="https://drive.google.com/file/d/1UfGKxarN3pr3kmH0qpVT089tZ3LDQovO/view?usp=sharing" class="blog-link" target="_blank">
                     Read →
+                </a>
+            </div>
+            <div class="blog-post">
+                <a href="https://docs.google.com/presentation/d/16V9TGh3Xi9RxhmywWtWF7uJGD1IbTwxljtGcyvS2lPA/edit?usp=sharing" target="_blank">
+                    <img src="blogimages/100 Architects of the Modern Era you Should Know (1).png" alt="100 Architects of the Modern Era You Should Know" class="blog-image">
+                </a>
+                <h2 class="blog-post-title">100 Architects of the Modern Era You Should Know</h2>
+                <p class="blog-post-description">A Google Slides presentation.</p>
+                <a href="https://docs.google.com/presentation/d/16V9TGh3Xi9RxhmywWtWF7uJGD1IbTwxljtGcyvS2lPA/edit?usp=sharing" class="blog-link" target="_blank">
+                    View Slides →
                 </a>
             </div>
         </div>
