--- a/about.html
+++ b/about.html
@@ -178,6 +178,11 @@ html:not(.loaded), body:not(.loaded) {
 
 @media only screen and (max-width: 550px) {
 }
+
+@media (pointer: coarse), (hover: none) {
+    #cursorGlow, #customCursor { display: none !important; }
+    html, body, *, *::before, *::after { cursor: auto !important; }
+}
 </style>
 
 <script>
@@ -211,6 +216,8 @@ html:not(.loaded), body:not(.loaded) {
         }
     }
 
+    const isFinePointer = window.matchMedia && window.matchMedia('(pointer: fine)').matches;
+    if (isFinePointer) {
     document.addEventListener('mousemove', function(e) {
         mouseX = e.clientX;
         mouseY = e.clientY;
@@ -272,9 +279,10 @@ html:not(.loaded), body:not(.loaded) {
              customCursor.classList.remove('orange');
          }
     });
+    }
 
     // Touch support for custom cursor on mobile
-    (function(){
+    if (isFinePointer) (function(){
         var cursorGlow = document.getElementById('cursorGlow');
         var customCursor = document.getElementById('customCursor');
         function showCursorAt(x, y) {
@@ -310,6 +318,7 @@ html:not(.loaded), body:not(.loaded) {
 
     // Add smooth navigation handling for all links
     document.addEventListener('DOMContentLoaded', function() {
+        if (!isFinePointer) return;
         // Add cursor protection to all navigation links
             const navLinks = document.querySelectorAll('a[href^="/"], a[href$=".html"], .header-nav-button, .reach-out-link');
         navLinks.forEach(link => {
