Update pages: about, art, blog, contact, dutch, index, projects

--- a/dutch.html
+++ b/dutch.html
@@ -175,7 +175,7 @@
             <div class="meeting-info">
                 <h2>Meeting Information</h2>
                 <div class="meeting-details">
-                    <p><i>When:</i> &nbsp; Wednesdays 7:00PM</p>
+                    <p><i>When:</i> &nbsp; Wednesdays 7:00PM (We are meeting during Winter Quarter 2026)</p>
                     <p><i>Where:</i> &nbsp; Swift Hall 200</p>
                     <p><i>Who:</i> &nbsp; All levels welcome!</p>
                 </div>
@@ -189,7 +189,7 @@
                 <p>I started this class in 2024 after wanting to introduce a Dutch program to the university for several years. There is no official Dutch language at program at UChicago despite <a href="https://flps.newberry.org/id/5420781_1_0073 " style="text-decoration: underline; color: inherit;" target="_blank">nearly 120 years</a> of calls to launch one. Our weekly language circle is designed for all skill levels, from complete beginners to those looking to hone their Dutch skills. We create a welcoming learning environment to learn at your own pace with tailored instruction.</p>
             </div>
 
-            <div class="schedule">
+            <!-- <div class="schedule">
                 <h2>Autumn 2025 Schedule</h2>
                 <div class="schedule-grid">
                     <div class="schedule-item">
@@ -216,7 +216,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="poster-gallery">
                 <h2>Media</h2>
@@ -246,7 +246,7 @@
     <div class="endspacesmall"></div>
     
     <div class="footer">
-        <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2025</span>
+        <span id="year"> </span><span> Noah Darwin Lee &nbsp;|&nbsp; 2026</span>
     </div>
 
     <style>
