Update contact page

--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
         <br>
         <br>
         <li>
-            <a href="https://www.linkedin.com/in/noah-lee-9a9401169/" id="linkedin">
+            <a href="https://www.linkedin.com/in/noahdlee/" id="linkedin">
                 <i class="fab fa-linkedin"></i>
                 <span>&nbsp;&nbsp;Linkedin</span>
             </a>
